--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "unnamed-todo",
+  "author": "minxd95",
+  "description": "unnamed todo-list app",
   "version": "0.1.0",
-  "main": "electron/main.js",
+  "main": "public/main.js",
+  "homepage": "./",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -11,6 +14,7 @@
     "@types/node": "^16.11.62",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "electron-is-dev": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -23,8 +27,21 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "electron:serve": "concurrently -k \"cross-env BROWSER=none npm start\" \"npm run electron:start\"",
-    "electron:build": "",
+    "electron:build": "npm run build && electron-builder -c.extraMetadata.main=build/main.js",
     "electron:start": "wait-on tcp:3000 && electron ."
+  },
+  "build": {
+    "extends": null,
+    "appId": "com.example.electron-cra",
+    "files": [
+      "dist/**/*",
+      "build/**/*",
+      "node_modules/**/*",
+      "package.json"
+    ],
+    "directories": {
+      "buildResources": "assets"
+    }
   },
   "eslintConfig": {
     "extends": [
@@ -48,6 +65,7 @@
     "concurrently": "^7.4.0",
     "cross-env": "^7.0.3",
     "electron": "^21.0.0",
+    "electron-builder": "^23.3.3",
     "wait-on": "^6.0.1"
   }
 }
